<resources>
    <string name="app_name">SOJO Calculator</string>
    <string name="memory_status_text">M</string>
    <string name="default_history_result_text">1+2+3+4 = 10</string>
    <string name="default_previous_result_text">1+2+3+4</string>
    <string name="default_current_result_text">0</string>
    <string name="memory_clear_text">MC</string>
    <string name="memory_recall_text">MR</string>
    <string name="memory_store_text">MS</string>
    <string name="memory_add_text">M+</string>
    <string name="memory_subtract_text">M-</string>
    <string name="power_sign">^</string>
    <string name="cube_sign">x³</string>
    <string name="cube_root_sign">∛</string>
    <string name="pi_sign">π</string>
    <string name="random_text">rnd</string>
    <string name="reciprocal_sign">1/x</string>
    <string name="square_sign">x²</string>
    <string name="square_root_sign">√</string>
    <string name="modulo_sign">mod</string>
    <string name="percent_sign">%</string>
    <string name="number_seven_char">7</string>
    <string name="number_eight_char">8</string>
    <string name="number_nine_char">9</string>
    <string name="delete_text">DEL</string>
    <string name="clear_text">CE/C</string>
    <string name="number_four_char">4</string>
    <string name="number_five_char">5</string>
    <string name="number_six_char">6</string>
    <string name="multiply_sign">×</string>
    <string name="divide_sign">÷</string>
    <string name="number_one_char">1</string>
    <string name="number_two_char">2</string>
    <string name="number_three_char">3</string>
    <string name="add_sign">+</string>
    <string name="subtract_sign">-</string>
    <string name="number_zero_char">0</string>
    <string name="dot_char">.</string>
    <string name="toggle_sign">+/-</string>
    <string name="equal_sign">=</string>
    <string name="clear_history">Clear History</string>
    <string name="do_you_really_want_to_delete_all_history">Do you really want to delete all history?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="not_allowed">Not allowed</string>
    <string name="about_and_instructions_title">ABOUT AND INSTRUCTIONS</string>
    <string name="copyright">©Copyright 2026 SOJO.se.</string>
    <string name="information_and_instructions">A simple calculator with some extra features.\n\nBy using a long click on any of the items in the history list, you can clear the history.</string>
    <string name="i_have_understand">I have understand</string>
    <string name="don_t_show_this_again">Don\'t show this again!</string>
    <string name="nan">NaN</string>
</resources>