<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- START: 7 8 9 DEL CE/C -->
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button style="@style/button"
            android:id="@+id/btn_seven"
            android:text="@string/number_seven_char"
            android:background="@color/colorNumberBtnBackground"
            android:textColor="@color/colorNumberBtnText"/>

        <Button style="@style/button"
            android:id="@+id/btn_eight"
            android:text="@string/number_eight_char"
            android:background="@color/colorNumberBtnBackground"
            android:textColor="@color/colorNumberBtnText" />

        <Button style="@style/button"
            android:id="@+id/btn_nine"
            android:text="@string/number_nine_char"
            android:background="@color/colorNumberBtnBackground"
            android:textColor="@color/colorNumberBtnText" />

        <Button style="@style/button"
            android:id="@+id/btn_delete"
            android:text="@string/delete_text"
            android:background="@color/colorRemoveFunctionBtnBackground"
            android:textColor="@color/colorRemoveFunctionBtnText" />

        <Button style="@style/button"
            android:id="@+id/btn_clear"
            android:text="@string/clear_text"
            android:background="@color/colorRemoveFunctionBtnBackground"
            android:textColor="@color/colorRemoveFunctionBtnText"/>
    </LinearLayout>
    <!-- END: 7 8 9 DEL CE/C -->

    <!-- START: 4 5 6 * / -->
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button style="@style/button"
            android:id="@+id/btn_four"
            android:text="@string/number_four_char"
            android:background="@color/colorNumberBtnBackground"
            android:textColor="@color/colorNumberBtnText" />

        <Button style="@style/button"
            android:id="@+id/btn_five"
            android:text="@string/number_five_char"
            android:background="@color/colorNumberBtnBackground"
            android:textColor="@color/colorNumberBtnText" />

        <Button style="@style/button"
            android:id="@+id/btn_six"
            android:text="@string/number_six_char"
            android:background="@color/colorNumberBtnBackground"
            android:textColor="@color/colorNumberBtnText" />

        <Button style="@style/button"
            android:id="@+id/btn_multiply"
            android:text="@string/multiply_sign"
            android:textSize="42sp"
            android:background="@color/colorBasicOperationBtnBackground"
            android:textColor="@color/colorBasicOperatorBtnText" />

        <Button style="@style/button"
            android:id="@+id/btn_divide"
            android:text="@string/divide_sign"
            android:textSize="42sp"
            android:background="@color/colorBasicOperationBtnBackground"
            android:textColor="@color/colorBasicOperatorBtnText"/>
    </LinearLayout>
    <!-- END: 4 5 6 * / -->

    <!-- START: 1 2 3 + - -->
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button style="@style/button"
            android:id="@+id/btn_one"
            android:text="@string/number_one_char"
            android:background="@color/colorNumberBtnBackground"
            android:textColor="@color/colorNumberBtnText" />

        <Button style="@style/button"
            android:id="@+id/btn_two"
            android:text="@string/number_two_char"
            android:background="@color/colorNumberBtnBackground"
            android:textColor="@color/colorNumberBtnText" />

        <Button style="@style/button"
            android:id="@+id/btn_three"
            android:text="@string/number_three_char"
            android:background="@color/colorNumberBtnBackground"
            android:textColor="@color/colorNumberBtnText" />

        <Button style="@style/button"
            android:id="@+id/btn_add"
            android:text="@string/add_sign"
            android:textSize="42sp"
            android:background="@color/colorBasicOperationBtnBackground"
            android:textColor="@color/colorBasicOperatorBtnText" />

        <Button style="@style/button"
            android:id="@+id/btn_subtract"
            android:text="@string/subtract_sign"
            android:textSize="42sp"
            android:background="@color/colorBasicOperationBtnBackground"
            android:textColor="@color/colorBasicOperatorBtnText"/>
    </LinearLayout>
    <!-- END: 1 2 3 + - -->

    <!-- START: 0 , +/- = -->
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button style="@style/button"
            android:id="@+id/btn_zero"
            android:text="@string/number_zero_char"
            android:background="@color/colorNumberBtnBackground"
            android:textColor="@color/colorNumberBtnText" />

        <Button style="@style/button"
            android:id="@+id/btn_dot"
            android:text="@string/dot_char"
            android:background="@color/colorNumberBtnBackground"
            android:textColor="@color/colorNumberBtnText" />

        <Button style="@style/button"
            android:id="@+id/btn_toggle"
            android:text="@string/toggle_sign"
            android:background="@color/colorNumberBtnBackground"
            android:textColor="@color/colorNumberBtnText" />

        <Button style="@style/button"
            android:id="@+id/btn_equal"
            android:text="@string/equal_sign"
            android:textSize="42sp"
            android:minWidth="150dp"
            android:layout_weight="2"
            android:background="@color/colorEqualBtnBackground"
            android:textColor="@color/colorEqualBtnText"/>
    </LinearLayout>
    <!-- END: 0 , +/- = -->
</LinearLayout>