<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- START: ^ x³ ∛ π rnd -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button style="@style/button"
            android:id="@+id/btn_power"
            android:text="@string/power_sign"
            android:background="@color/colorSpecialFunctionBtnBackground"
            android:textColor="@color/colorSpecialFunctionBtnText"
            tools:ignore="NestedWeights" />

        <Button style="@style/button"
            android:id="@+id/btn_cube"
            android:text="@string/cube_sign"
            android:background="@color/colorSpecialFunctionBtnBackground"
            android:textColor="@color/colorSpecialFunctionBtnText"/>

        <Button style="@style/button"
            android:id="@+id/btn_cube_root"
            android:text="@string/cube_root_sign"
            android:background="@color/colorSpecialFunctionBtnBackground"
            android:textColor="@color/colorSpecialFunctionBtnText"/>

        <Button style="@style/button"
            android:id="@+id/btn_pi"
            android:text="@string/pi_sign"
            android:background="@color/colorSpecialFunctionBtnBackground"
            android:textColor="@color/colorSpecialFunctionBtnText"/>

        <Button style="@style/button"
            android:id="@+id/btn_rnd"
            android:text="@string/random_text"
            android:background="@color/colorSpecialFunctionBtnBackground"
            android:textColor="@color/colorSpecialFunctionBtnText"/>
        </LinearLayout>
        <!-- END: ^ x³ ∛ π rnd -->

    <!-- START: 1/x x² √ mod % -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button style="@style/button"
            android:id="@+id/btn_reciprocal"
            android:text="@string/reciprocal_sign"
            android:background="@color/colorSpecialFunctionBtnBackground"
            android:textColor="@color/colorSpecialFunctionBtnText"/>

        <Button style="@style/button"
            android:id="@+id/btn_square"
            android:text="@string/square_sign"
            android:background="@color/colorSpecialFunctionBtnBackground"
            android:textColor="@color/colorSpecialFunctionBtnText"/>

        <Button style="@style/button"
            android:id="@+id/btn_square_root"
            android:text="@string/square_root_sign"
            android:background="@color/colorSpecialFunctionBtnBackground"
            android:textColor="@color/colorSpecialFunctionBtnText"/>

        <Button style="@style/button"
            android:id="@+id/btn_modulo"
            android:text="@string/modulo_sign"
            android:background="@color/colorSpecialFunctionBtnBackground"
            android:textColor="@color/colorSpecialFunctionBtnText"/>

        <Button style="@style/button"
            android:id="@+id/btn_percent"
            android:text="@string/percent_sign"
            android:background="@color/colorSpecialFunctionBtnBackground"
            android:textColor="@color/colorSpecialFunctionBtnText"/>
    </LinearLayout>
    <!-- END: 1/x x² √ mod % -->
</LinearLayout>