<?xml version="1.0" encoding="utf-8"?>
<!-- START: Result frame -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDisplayBackground">

    <!-- START: Current and previous result -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_memory_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memory_status_text"
                    android:textAlignment="textStart"
                    android:textSize="30sp"
                    android:textColor="@color/colorMemoryStatusText"/>

                <TextView
                    android:id="@+id/tv_previous_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/default_previous_result_text"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"
                    android:textColor="@color/colorDisplayText"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_current_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:gravity="bottom|end"
                android:text="@string/default_current_result_text"
                android:textSize="30sp"
                android:textColor="@color/colorDisplayText"/>
        </LinearLayout>
    </LinearLayout>
    <!-- END: Current and previous result -->
</LinearLayout>
<!-- END: Result frame -->

